# langgraph-chatgpt-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.cursor/rules/: specify-rules.mdc
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7e4a4c965825_create_conversations_and_messages_tables.py  a1b2c3d4e5f6_add_tool_invocations_table.py  b2c3d4e5f6a7_add_tool_result_to_tool_invocations.py
backend/app/: config.py  main.py
backend/app/application/: chat_graph.py  use_cases.py
backend/app/domain/: entities.py  ports.py
backend/app/infrastructure/: database.py  llm_service.py  models.py  repositories.py
backend/app/presentation/: dependencies.py  middleware.py  schemas.py
backend/app/presentation/routes/: chat.py  conversations.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_chat.py  test_conversation_routes.py
backend/tests/unit/: test_agent_service.py  test_chat_graph.py  test_chat_route.py  test_chat_use_case.py  test_config.py  test_entities.py  test_schemas.py
frontend/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/e2e/: math-tool.spec.ts  web-search.spec.ts
frontend/playwright-report/: index.html
frontend/tests/: ChatView.test.tsx  SearchIndicator.test.tsx  ToolResultCard.test.tsx  api.test.ts  types.test.ts
playwright/: package-lock.json  package.json  playwright.config.ts
(+40 files in other folders)
